# fastapi-sample

./: pyproject.toml
fastapi_sample/: main.py
tests/: test_sample.py
